Mon, Apr 22, 2024, 3:28 PM +08:00

--- a/finance/templates/buy.html
+++ b/finance/templates/buy.html
@@ -75,7 +75,7 @@
                         let totalbalance = await returnBalance();
 
                         // regex check
-                        let pattern = /[0-9]/;
+                        let pattern = /^\d+$/;
 
                         let n = autoEl.value;
                         let price = responseObj["price"];
