--- a/finance/templates/buy.html
+++ b/finance/templates/buy.html
@@ -75,7 +75,7 @@
                         let totalbalance = await returnBalance();
 
                         // regex check
-                        let pattern = /^\d+$/;
+                        regex = new RegExp = ("/^\d+$/");
 
                         let n = autoEl.value;
                         let price = responseObj["price"];
