Mon, Apr 22, 2024, 3:32 PM +08:00

--- a/finance/templates/buy.html
+++ b/finance/templates/buy.html
@@ -75,7 +75,7 @@
                         let totalbalance = await returnBalance();
 
                         // regex check
-                        regex = new RegExp = ("/^\d+$/");
+                        regex = new RegExp = (^\d+$);
 
                         let n = autoEl.value;
                         let price = responseObj["price"];
