Mon, Apr 22, 2024, 3:33 PM +08:00

--- a/finance/templates/buy.html
+++ b/finance/templates/buy.html
@@ -75,7 +75,8 @@
                         let totalbalance = await returnBalance();
 
                         // regex check
-                        regex = new RegExp = (^\d+$);
+                        pattern = (^\d+$);
+                        
 
                         let n = autoEl.value;
                         let price = responseObj["price"];
