Mon, Apr 22, 2024, 3:40 PM +08:00

--- a/finance/templates/buy.html
+++ b/finance/templates/buy.html
@@ -76,6 +76,8 @@
 
                         // regex check
                         const pattern =  /^\d+$/;
+                        if (autoEl.value = '')
+
                         if (pattern.test(autoEl.value)) {
 
                             let n = autoEl.value;
