Mon, Apr 22, 2024, 3:41 PM +08:00

--- a/finance/templates/buy.html
+++ b/finance/templates/buy.html
@@ -76,9 +76,7 @@
 
                         // regex check
                         const pattern =  /^\d+$/;
-                        if (autoEl.value = '')
-
-                        if (pattern.test(autoEl.value)) {
+                        if ((pattern.test(autoEl.value)) || autoEl.value == '') {
 
                             let n = autoEl.value;
                             let price = responseObj["price"];
