Mon, Apr 22, 2024, 3:42 PM +08:00

--- a/finance/templates/buy.html
+++ b/finance/templates/buy.html
@@ -76,7 +76,9 @@
 
                         // regex check
                         const pattern =  /^\d+$/;
-                        if ((pattern.test(autoEl.value)) || autoEl.value == '') {
+                        if (autoEl.value == '')
+                            autoEl.value = 0;
+                        if (pattern.test(autoEl.value)) {
 
                             let n = autoEl.value;
                             let price = responseObj["price"];
