Mon, Apr 22, 2024, 4:47 PM +08:00

--- a/finance/templates/buy.html
+++ b/finance/templates/buy.html
@@ -92,6 +92,9 @@
                             document.querySelector("#buystatus").innerHTML = "Input must be strictly numeric"
                     });
 
+                    let formEl = document.querySelector("#buytransaction");
+                    formEl.addEventListener('submit', async function (event)
+
                 }
             }
         });
