--- a/finance/templates/buy.html
+++ b/finance/templates/buy.html
@@ -93,7 +93,18 @@
                     });
 
                     let formEl = document.querySelector("#buytransaction");
-                    formEl.addEventListener('submit', async function (event)
+                    formEl.addEventListener('submit', async function(event) {
+                        const formdata = new FormData(formEl);
+                        const data = Object.fromEntries(formdata);
+
+                        let response = await fetch('\buy', {
+                            method="POST",
+                            headers={"Content-Type":"application/json"},
+                            body=JSON.stringify(data)
+                        });
+
+
+                    }
 
                 }
             }
