Mon, Apr 22, 2024, 5:00 PM +08:00

--- a/finance/templates/buy.html
+++ b/finance/templates/buy.html
@@ -94,6 +94,8 @@
 
                     let formEl = document.querySelector("#buytransaction");
                     formEl.addEventListener('submit', async function(event) {
+                        event.preventDefault();
+
                         const formdata = new FormData(formEl);
                         const data = Object.fromEntries(formdata);
 
