Mon, Apr 22, 2024, 5:03 PM +08:00

--- a/finance/templates/buy.html
+++ b/finance/templates/buy.html
@@ -29,7 +29,7 @@
             const formdata = new FormData(formEl);
             const data = Object.fromEntries(formdata);
 
-            let response = await fetch('/buy', {
+            let response = await fetch('/quote', {
                 method: 'POST',
                 headers: {'Content-Type': 'application/json'},
                 body: JSON.stringify(data)
