--- a/finance/templates/buy.html
+++ b/finance/templates/buy.html
@@ -100,8 +100,8 @@
                         const data = Object.fromEntries(formdata);
 
                         let response = await fetch('/buy', {
-                            method="POST",
-                            headers={"Content-Type":"application/json"},
+                            method='POST',
+                            headers={'Content-Type':'application/json'},
                             body=JSON.stringify(data)
                         });
                         let responset = await response.text();
