Mon, Apr 22, 2024, 6:05 PM +08:00

--- a/finance/templates/buy.html
+++ b/finance/templates/buy.html
@@ -96,7 +96,7 @@
                         const formdata = new FormData(formEl);
                         const data = Object.fromEntries(formdata);
 
-                        let result = buyValueCheck(data["price"], autoEl.value, totalbalance);
+                        let result = buyValueCheck(data["price"], data["value"], totalbalance);
 
                         let response = await fetch('/buy', {
                             method: 'POST',
