--- a/finance/templates/buy.html
+++ b/finance/templates/buy.html
@@ -120,7 +120,7 @@
                             buyStatus("Insufficient Funds");
                         }
                         if (result == '2') {
-                            buyStatus("Input must be strictly numeric");
+                            buyStatus("Input must be strictly numericw");
                         }
 
                     });
