Mon, Apr 22, 2024, 9:54 PM +08:00

--- a/finance/templates/buy.html
+++ b/finance/templates/buy.html
@@ -109,7 +109,7 @@
                             let response = await fetch('/buy', {
                                 method: 'POST',
                                 headers: {'Content-Type':'application/json'},
-                                body: JSON.stringify(datab)
+                                body: JSON.stringify(data)
                             });
                             let responset = await response.text();
                             let responseObj = JSON.parse(responset);
