--- a/finance/templates/index.html
+++ b/finance/templates/index.html
@@ -6,11 +6,18 @@
 
 {% block main %}
     <table>
-        <col />
-        <col />
-        <col />
-        <col />
+        <col style="width:20%" />
+        <col style="width:20%" />
+        <col style="width:20%" />
+        <col style="width:20%" />
+        <col style="width:20%" />
+        <th>
+            <tr>
 
+                
+            </tr>
+
+        </th>
 
 
 
