Tue, Apr 23, 2024, 2:39 PM +08:00

--- a/finance/templates/index.html
+++ b/finance/templates/index.html
@@ -11,19 +11,14 @@
         <col style="width:20%" />
         <col style="width:20%" />
         <col style="width:20%" />
-        <th>
-            <tr>
-                <td></td>
-
-            </tr>
-
-        </th>
-
-
+        <tableinsert></tableinsert>
 
     </table>
 
+    <script>
+        
 
+    </script>
 
 {% endblock %}
 
