Tue, Apr 23, 2024, 2:43 PM +08:00

--- a/finance/templates/index.html
+++ b/finance/templates/index.html
@@ -16,7 +16,12 @@
     </table>
 
     <script>
-        
+        async fetchpage() {
+            let response = await fetch('/index');
+            let responset = await 
+
+
+        }
 
     </script>
 
