Tue, Apr 23, 2024, 2:45 PM +08:00

--- a/finance/templates/index.html
+++ b/finance/templates/index.html
@@ -18,7 +18,10 @@
     <script>
         async fetchpage() {
             let response = await fetch('/index');
-            let responset = await 
+            let responset = await response.text();
+            let responseObj = JSON.parse(responset);
+
+            
 
 
         }
