Tue, Apr 23, 2024, 2:50 PM +08:00

--- a/finance/templates/index.html
+++ b/finance/templates/index.html
@@ -20,11 +20,9 @@
             let response = await fetch('/index');
             let responset = await response.text();
             let responseObj = JSON.parse(responset);
-
-            
-
-
         }
+
+        fetchpage();
 
     </script>
 
