--- a/finance/templates/index.html
+++ b/finance/templates/index.html
@@ -16,13 +16,13 @@
     </table>
 
     <script>
-        async fetchpage() {
-            let response = await fetch('/index');
-            let responset = await response.text();
-            let responseObj = JSON.parse(responset);
-        }
 
-        fetchpage();
+        let response = await fetch('/index');
+        let responset = await response.text();
+        let responseObj = JSON.parse(responset);
+
+        document.querySelector("tableinsert").innerHTML = "HAHAH";
+
 
     </script>
 
