--- a/finance/templates/index.html
+++ b/finance/templates/index.html
@@ -17,7 +17,7 @@
 
     <script>
 
-        let response = await fetch('/index');
+        let response = await fetch('/');
         let responset = await response.text();
         let responseObj = JSON.parse(responset);
 
