Tue, Apr 23, 2024, 3:09 PM +08:00

--- a/finance/templates/index.html
+++ b/finance/templates/index.html
@@ -20,8 +20,9 @@
             let response = await fetch('/');
             let responset = await response.text();
             let responseObj = JSON.parse(responset);
+            html = `utoseurosur`;
 
-            document.querySelector("#ho").innerHTML = "HAHAH";
+            document.querySelector("#ho").innerHTML = html;
         }
 
         fetchpage();
