Tue, Apr 23, 2024, 3:15 PM +08:00

--- a/finance/templates/index.html
+++ b/finance/templates/index.html
@@ -16,14 +16,15 @@
     </table>
 
     <script>
-        async function fetchpage() {
+
+        document.addEventListener('DOMContent_Loaded', async function fetchpage() {
             let response = await fetch('/');
             let responset = await response.text();
             let responseObj = JSON.parse(responset);
             html = `utoseurosur`;
 
             document.querySelector("#ho").innerHTML = html;
-        }
+        });
 
 
         fetchpage();
