Tue, Apr 23, 2024, 3:19 PM +08:00

--- a/finance/templates/index.html
+++ b/finance/templates/index.html
@@ -21,6 +21,8 @@
             let response = await fetch('/');
             let responset = await response.text();
             let responseObj = JSON.parse(responset);
+            console.log(responseObj['status']);
+
             html = `utoseurosur`;
 
             document.querySelector("#ho").innerHTML = `sdsd`;
