--- a/finance/templates/index.html
+++ b/finance/templates/index.html
@@ -18,7 +18,7 @@
     <script>
 
         document.addEventListener('DOMContentLoaded', async function() {
-            let reply = await fetch('/');
+            let reply = await fetch('/', method:"POST");
             let replyt = await reply.text();
             let replyObj = JSON.parse(replyt);
             console.log(replyObj['status']);
