--- a/finance/templates/index.html
+++ b/finance/templates/index.html
@@ -11,7 +11,7 @@
         <col style="width:20%" />
         <col style="width:20%" />
         <col style="width:20%" />
-        <tableinsert id="ho"></tableinsert>
+        <tableinsert></tableinsert>
 
     </table>
 
@@ -25,7 +25,7 @@
 
             html = `utoseurosur`;
 
-            document.querySelector("#ho").innerHTML = replyObj['status'];
+            document.querySelector("tableinsert").innerHTML = replyObj['status'];
         }
 
         fetchpage();
