Tue, Apr 23, 2024, 3:52 PM +08:00

--- a/finance/templates/index.html
+++ b/finance/templates/index.html
@@ -21,7 +21,11 @@
             let reply = await fetch('/', {method:"POST"});
             let replyt = await reply.text();
             let replyObj = JSON.parse(replyt);
-            console.log(replyObj['status']);
+
+            html = '';
+
+            for (let obj of replyObj)
+                console.log(replyObj['status']);
 
             html = `utoseurosur`;
 
