Tue, Apr 23, 2024, 3:53 PM +08:00

--- a/finance/templates/index.html
+++ b/finance/templates/index.html
@@ -25,9 +25,9 @@
             html = '';
 
             for (let obj of replyObj)
-                console.log(replyObj['status']);
-
-            html = `utoseurosur`;
+                html += `<td></td>
+                        <td></td>
+                        <td></td>
 
             document.querySelector("tableinsert").innerHTML = replyObj['status'];
         }
