Tue, Apr 23, 2024, 3:55 PM +08:00

--- a/finance/templates/index.html
+++ b/finance/templates/index.html
@@ -25,9 +25,9 @@
             html = '';
 
             for (let obj of replyObj)
-                html += `<td></td>
+                html += `<td>${obj[]}</td>
                         <td></td>
-                        <td></td>
+                        <td></td>`
 
             document.querySelector("tableinsert").innerHTML = replyObj['status'];
         }
