Tue, Apr 23, 2024, 4:07 PM +08:00

--- a/finance/templates/index.html
+++ b/finance/templates/index.html
@@ -23,7 +23,7 @@
             let replyObj = JSON.parse(replyt);
 
             console.log(replyObj)
-            html = '1st';
+            html = '';
 
             for (let obj of replyObj)
                 html += `<td>qweh</td>
