--- a/finance/templates/index.html
+++ b/finance/templates/index.html
@@ -11,7 +11,8 @@
         <col style="width:20%" />
         <col style="width:20%" />
         <col style="width:20%" />
-        <tableinsert></tableinsert>
+        
+        <div id="portfolio"></div>
 
     </table>
 
@@ -41,7 +42,7 @@
                         </tr>
                         `
             }
-            document.querySelector("tableinsert").innerHTML = html;
+            document.querySelector("#portfolio").innerHTML = html;
 
         }
 
