--- a/finance/templates/index.html
+++ b/finance/templates/index.html
@@ -11,7 +11,18 @@
         <col style="width:20%" />
         <col style="width:20%" />
         <col style="width:20%" />
-        
+
+        <thead>
+            <tr>
+                <td>SYMBOL</td>
+                <td>Shares</td>
+                <td>Unit Price</td>
+                <td>Total Value</td>
+                <
+
+            </tr>
+
+        </thead>
         <div id="portfolio"></div>
 
     </table>
