--- a/finance/templates/index.html
+++ b/finance/templates/index.html
@@ -6,11 +6,11 @@
 
 {% block main %}
     <table>
-        <col style="width:20%" />
-        <col style="width:20%" />
-        <col style="width:20%" />
-        <col style="width:20%" />
-        <col style="width:20%" />
+        <col style="width:15%" />
+        <col style="width:15%" />
+        <col style="width:15%" />
+        <col style="width:15%" />
+        <col style="width:40%" />
 
         <thead>
             <tr>
@@ -18,7 +18,7 @@
                 <td>Shares</td>
                 <td>Unit Price</td>
                 <td>Total Value</td>
-                <td>Grand Total</td>
+                <td></td>
             </tr>
 
         </thead>
@@ -54,6 +54,16 @@
                         </tr>
                         `
             }
+
+            html +=`
+                        <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td>Total Stock Value = $</td>
+                        </tr>
+                        `
             document.querySelector("#portfolio").innerHTML = html;
 
         }
